syntax = "proto3";

package game_pb;
import "tracker.proto";

service GameService {
    rpc TakeSlot (TakeSlotRequest) returns (TakeSlotResponse) {}
    rpc StatusCopy (CopyRequest) returns (CopyResponse) {}
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
    rpc MovePlayer (MoveRequest) returns (MoveResponse) {}
}

message Coordinate {
    int32 row = 1;
    int32 col = 2;
}
message Slot {
    bool treasure = 1;
    string player_id = 2;
}

message SlotRow {
    repeated Slot slots = 1;
} // this indicates each row of the grid

message Grid {
    repeated SlotRow slot_rows = 1; // this indicates the grid which constructed by slot_rows

    // indices for fast retrieval
    repeated int32 treasure_slots = 2; // positions of treasure hiding slots
    map<string, int32> player_slots = 3;
    repeated int32 empty_slots = 4;
}

message CopyRequest {
    Grid grid = 1;
    repeated PlayerState player_states = 2;
    int32 state_version = 3; // game state version should be atomically incremented
}

message CopyResponse {
    enum Status {
        UNKNOWN = 0;
        OK = 1; // status updated
        I_AM_NOT_BACKUP = 2; // cannot update self status
        NULL_ERROR = 3; // received null object
    }
    Status status = 1;
}

message TakeSlotRequest {
    string id = 1;
    Coordinate move_to_coordinate = 2;
}

message MoveRequest {
    string id = 1;
    string move = 2;
}

message MoveResponse {
    enum Status {
        OK = 0; // ok means no error
        INVALID_INPUT = 1; // bad request
        SLOT_TAKEN = 2; // this slot is taken. Your current position will not change
        I_AM_NOT_A_SERVER = 3; // host you are requesting is not a server. Try to find the correct primary server
        I_AM_ONLY_BACKUP = 4; // host you are requesting is only a backup server which takes no write requests. Try to find the correct primary server
        SLAVE_INIT_IN_PROGRESS = 5; // slave was down. a new slave is being initialised. writes will be blocked until that's done
    }
    Status status = 1;
    repeated PlayerState player_states = 2;
}

message PlayerState {
    string player_id = 1;
    Coordinate current_position = 2;
    int32 score = 3;
}

message TakeSlotResponse {
    enum Status {
        OK = 0; // ok means no error
        INVALID_INPUT = 1; // bad request
        SLOT_TAKEN = 2; // this slot is taken. Your current position will not change
        I_AM_NOT_A_SERVER = 3; // host you are requesting is not a server. Try to find the correct primary server
        I_AM_ONLY_BACKUP = 4; // host you are requesting is only a backup server which takes no write requests. Try to find the correct primary server
        SLAVE_INIT_IN_PROGRESS = 5; // slave was down. a new slave is being initialised. writes will be blocked until that's done
    }
    Status status = 1;
    repeated PlayerState player_states = 2;
}

message HeartbeatRequest {
    string player_id = 1;
    Registry registry = 2;
}

message HeartbeatResponse {
}